[IndexedDB] Avoiding event queueing when possible

The IndexedDB renderer implementation re-queues all events to be
friendly with the Inspector. This is a large performance bottleneck, as
it forces all IDB events to pass through the event queue twice.

Pending a more thorough investigation of the inspector, this patch
removes the re-queueing of events when the debugger isn't pausing our
context.

Bug: 795369
Change-Id: I7c598c29b66dc05c4b8830c3a77129d1c5fc45d1